create github pages

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content4 cid-rkC2Rmvgrk" id="content4-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content4 cid-rkC2Rmvgrk" id="content4-1">
 
     
 
@@ -182,7 +182,7 @@
 
      
 
-    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJTW2Ee9YNZ0gRvmwt6y9YGJA" allowfullscreen=""></iframe></div>
+    <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:ChIJTW2Ee9YNZ0gRvmwt6y9YGJA" allowfullscreen=""></iframe></div>
 </section>
 
 <section class="mbr-section content4 cid-rkC3p1WVh3" id="content4-6">
@@ -352,6 +352,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our<a href='https://sarahlouperkins.github.io/privacy.html'>cookie policy</a>.">
   </body>
 </html>
