--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content4 cid-rkC2Rmvgrk" id="content4-1">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content4 cid-rkC2Rmvgrk" id="content4-1">
 
     
 
@@ -352,6 +352,6 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our<a href='https://sarahlouperkins.github.io/privacy.html'>cookie policy</a>.">
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='https://sarahlouperkins.github.io/privacy.html'>cookie policy</a>.">
   </body>
 </html>
